# COEN6312_Project

./: CMakeLists.txt  README.md  main.cpp
include/: Administrator.h  Booking.h  BookingManager.h  Instrument.h  Microphone.h  PaymentManager.h  Receptionnist.h  RecordingRoom.h  Room.h  RoomManager.h  User.h  Uuid.h
include/Equipment/: AdvancedLightingSystem.h  AdvancedSoundSystem.h  BasicLightingSystem.h  Equipment.h  SoundSystem.h  Stage.h
include/Equipment/Instruments/: ElectricBassAmp.h  EletricGuitarAmp.h  Instrument.h  Piano.h  SmallDrums.h  StandardDrums.h  Synthesizer.h
include/Instruments/: Drums.h  EletricGuitarAmp.h  Instrument.h  Microphone.h  SoundSystem.h
include/Rooms/: BandRoom.h  DrumRoom.h  RecordingRoom.h  Room.h  SmallDrumRoom.h  SoloDuoRoom.h  StandardDrumRoom.h
src/: Administrator.cpp  Booking.cpp  BookingManager.cpp  Instrument.cpp  Microphone.cpp  Receptionnist.cpp  RecordingRoom.cpp  Room.cpp  RoomManager.cpp  User.cpp
src/Equipment/: AdvancedLightingSystem.cpp  AdvancedSoundSystem.cpp  BasicLightingSystem.cpp  Equipment.cpp  PaymentManager.cpp  SoundSystem.cpp  Stage.cpp
src/Equipment/Instruments/: Drums.cpp  ElectricBassAmp.cpp  EletricGuitarAmp.cpp  Instrument.cpp  Piano.cpp  SmallDrums.cpp  StandardDrums.cpp  Synthesizer.cpp
src/Instruments/: ElectricBassAmp.cpp  EletricGuitarAmp.cpp  Instrument.cpp  Microphone.cpp  Piano.cpp  SmallDrums.cpp  SoundSystem.cpp
src/Rooms/: BandRoom.cpp  DrumRoom.cpp  RecordingRoom.cpp  Room.cpp  SmallDrumRoom.cpp  SoloDuoRoom.cpp  StandardDrumRoom.cpp
tests/: BookingTests.cpp  CheckInOutTests.cpp  InstrumentTests.cpp  PaymentTests.cpp  RoleTests.cpp  RoomTests.cpp  TestSetup.h
